# NIFTi_OCU

./: LICENSE  README.md  manifest.xml
nifti_user/ocu/: CMakeLists.txt
nifti_user/ocu/launchers/: RVIZWithModel.launch  bagger_ugv_base_light.launch  bagger_ugv_platform.launch  latest_bag.launch  ocu.launch  ocu_uav.launch  pic_viewer.launch  uuid_manager.launch  video_UAV_1.launch
nifti_user/ocu/media/OGRE/meshes/: Barrel Vertical.dae  (+4 more)
nifti_user/ocu/media/images/: Icons GUI.pptx
nifti_user/ocu/media/robot_model/: NIFTi.urdf  Robot_bogie.stl  flipper_normalized.stl  flipper_normalized4.stl
nifti_user/ocu/src/: AnnotatedPicUtil.cpp  AppOCU.cpp  FloatValidator.h  IMultiVisualizationManager.h  IMultiVizInputEventsHandler.h  IRobotStatusListener.h  IVisualizationManager.h  InFieldPicsManager.cpp  NIFTiViewsUtil.h  OCUVirtualSceneManager.cpp  OCUVirtualSceneManager.h  PictureDisplayUtil.cpp  PictureMetadataUtil.cpp  PictureMetadataUtil.h  RobotsStatusesManager.cpp  RobotsStatusesManager.h  UUIDsManager.cpp  VirtualSceneManager.h  VisualizationManager.cpp  VisualizationManagerFor3DScene.h  VisualizationManagerForBlankScreen.h  VisualizationManagerForPhoto.cpp  slice2cpp4gui.cmake
nifti_user/ocu/src/Displays/: CameraDisplay.cpp  Display.cpp  DistanceDisplay.cpp  DistanceDisplay.h  GridCellsDisplay.cpp  GridCellsDisplay.h  GroundPolygonsDisplay.h  ImageDisplay.h  InFieldPictureDisplay.h  LaserScanDisplay.cpp  MapDisplay.cpp  MarkerDisplay.h  NIFTiPoseDisplay.h  ObjectOfInterestDisplay.cpp  ObjectOfInterestDisplay.h  PhotoDisplay.h  PointCloud2Display.cpp  PointCloud2Display.h  PointCloudBase.h  PoseArrayDisplay.h  ROSImageListener.cpp  ROSImageListener.h  RobotModelDisplay.cpp  RobotModelDisplay.h  TFDisplay.h  UAVModelDisplay.h
nifti_user/ocu/src/Panels/: DialoguePanel.cpp  FilmstripPanel.h  FilmstripPanelForInFieldPics.cpp  FilmstripPanelForInFieldPics.h  MultiVizKeyEvent.h  MultiVizMouseEvent.h  OCUFrame.h  PictureInfoPanel.cpp  QuadVizPanel.h  RenderPanel.h  RightPanel.cpp  RightPanel.h  UAVControlPanel.cpp  VisualizationFrame.cpp  VisualizationFrame.h  WaitForMasterDialog.cpp  WaitForMasterDialog.h  WaitForMasterThread.cpp  WaitForMasterThread.h
nifti_user/ocu/src/Robot/: LinkUpdater.h  TFLinkUpdater.h
nifti_user/ocu/src/Selection/: LocationSelectionManager.cpp  LocationSelectionManager.h  MarkerSelectionManager.cpp  SelectionManager.h
nifti_user/ocu/src/Tools/: DebugTool.cpp  DebugTool.h  GoToTool.cpp  MoveTool.h  PhotoTool.cpp  PhotoTool.h  PoseTool.cpp  StandardOCUTool.cpp  Tool.cpp  Tool.h
nifti_user/ocu/src/ViewControllers/: ArmCamViewController.h  CameraViewController.cpp  Chase2DViewController.cpp  Chase3DViewController.cpp  FixedCamViewController.cpp  IViewController.h  Map2DViewController.cpp  Map2DViewController.h  Map3DViewController.cpp  OrthogonalViewController.cpp  PTZCamViewController.cpp  PhotoViewController.h  ViewController.h  ViewControllerFactory.cpp
src/: AnnotatedPicUtil.h  AnnotatedStatusLevel.h  CMakeLists.txt  IPullHandleEventHandler.h  InFieldPicsManager.h  NIFTiConstants.cpp  NIFTiConstants.h  NIFTiROSOgreUtil.cpp  NIFTiROSOgreUtil.h  NIFTiROSUtil.cpp  NIFTiROSUtil.h  NIFTiViewsUtil.cpp  OCUMessagePublisherThread.cpp  OCUMessagePublisherThread.h  PictureDisplayUtil.h  UUIDsManager.h  VirtualSceneManager.cpp  VisualizationManager.h  VisualizationManagerFor3DScene.cpp  VisualizationManagerForBlankScreen.cpp  VisualizationManagerForCamera.cpp  VisualizationManagerForCamera.h  VisualizationManagerForPhoto.h  WXLogROSOut.cpp
src/Displays/: CameraDisplay.h  Display.h  FrameInfo.h  GridDisplay.cpp  GridDisplay.h  GroundPolygonsDisplay.cpp  ImageDisplay.cpp  InFieldPictureDisplay.cpp  LaserScanDisplay.h  MapDisplay.h  MarkerDisplay.cpp  NIFTiPoseDisplay.cpp  OgreObjectsCreator.cpp  OgreObjectsCreator.h  PathDisplay.cpp  PathDisplay.h  PhotoDisplay.cpp  PointCloudBase.cpp  PointCloudDisplay.cpp  PointCloudDisplay.h  PoseArrayDisplay.cpp  PoseDisplay.cpp  PoseDisplay.h  ROSImageTexture.cpp  TFDisplay.cpp  UAVModelDisplay.cpp
src/Displays/Markers/: GenericMarkerCreator.cpp  GenericMarkerCreator.h  IUSARMarker.h  LocationOfInterestMarker.cpp  LocationOfInterestMarker.h  OOIMarkerFactory.cpp  OOIMarkerFactory.h  ObjectOfInterestMarker.cpp  ObjectOfInterestMarker.h  SignObjectOfInterestMarker.h  VictimObjectOfInterestMarker.cpp  arrow_marker.cpp  arrow_marker.h  line_list_marker.h  line_strip_marker.cpp  mesh_loader.cpp  mesh_resource_marker.h  text_view_facing_marker.h  triangle_list_marker.cpp
src/Displays/Transformers/: FrameTransformer.cpp
src/Displays/Transformers/PointCloud/: AxisColorPCTransformer.cpp  AxisColorPCTransformer.h  IntensityPCTransformer.cpp  PointCloudTransformer.h  RGB8PCTransformer.cpp
src/Panels/: DialoguePanel.h  ElementOfInterestPanel.cpp  ElementOfInterestPanel.h  FilmstripPanel.cpp  FilmstripPanelForViewTypes.cpp  FilmstripPanelForViewTypes.h  MotorControlPanel.cpp  MotorControlPanel.h  OCUFrame.cpp  PictureInfoPanel.h  PlanningPanel.cpp  PlanningPanel.h  PullHandle.cpp  PullHandle.h  QuadVizPanel.cpp  RenderPanel.cpp  SimplifiedDialoguePanel.cpp  SimplifiedDialoguePanel.h  SplashScreen.cpp  ThreeHandlePanel.cpp  ThreeHandlePanel.h  TopPanel.cpp  TopPanel.h  UAVControlPanel.h  UGVActuatorsControlPanel.cpp  UGVActuatorsControlPanel.h
src/Robot/: Robot.cpp  Robot.h  RobotLink.cpp  RobotLink.h  TFLinkUpdater.cpp
src/Selection/: MarkerSelectionManager.h  SelectionManager.cpp
src/Tools/: ClickTool.cpp  ClickTool.h  GoToTool.h  GoalTool.cpp  GoalTool.h  MoveTool.cpp  PoseTool.h  StandardOCUTool.h
src/ViewControllers/: ArmCamViewController.cpp  BlankViewController.cpp  BlankViewController.h  CameraViewController.h  Chase2DViewController.h  Chase3DViewController.h  FirstPersonViewController.cpp  FirstPersonViewController.h  FixedCamViewController.h  Map3DViewController.h  OrthogonalViewController.h  PTZCamViewController.h  PerspectiveViewController.cpp  PerspectiveViewController.h  PhotoViewController.cpp  ViewController.cpp  ViewControllerFactory.h  VirtualPTZViewController.cpp  VirtualPTZViewController.h
(+166 files in other folders)
